# json2excel-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  sample.json
docs/: guide.md  tech.md
examples/: ads_small.json  commands.md
src/json_to_excel_converter/: __init__.py  cli.py  flatten.py  io_json.py  io_table.py
tests/cli/: test_cli_csv.py  test_cli_xlsx.py
tests/unit/: test_flatten.py
