[project]
name = "json-to-excel-converter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lorenzo", email = "v.lorenzo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ijson>=3.4.0",
    "openpyxl>=3.1.5",
    "orjson>=3.11.3",
    "rich>=14.1.0",
    "typer>=0.19.2",
]

[project.scripts]
json-to-excel-converter = "json_to_excel_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.1",
]
